--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "preserve",
     "incremental": true,
     "typeRoots": [
-      "@types"
+      "types"
     ],
     "plugins": [
       {
