--- a/package.json
+++ b/package.json
@@ -10,38 +10,41 @@
     "migrate": "drizzle-kit generate --dialect=postgresql --schema=./supabase/db/schemas/ --out=./supabase/db/migrations/drizzle && node ./supabase/db/migration/migrate.js"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.24",
+    "@heroui/date-input": "^2.3.24",
+    "@heroui/drawer": "^2.2.21",
+    "@heroui/form": "^2.1.24",
+    "@heroui/input": "^2.4.25",
+    "@heroui/react": "^2.8.2",
+    "@heroui/table": "^2.2.24",
+    "@heroui/toast": "^2.0.14",
     "@hookform/resolvers": "^3.9.0",
-    "@mantine/core": "^7.13.2",
-    "@mantine/form": "^7.13.2",
-    "@mantine/hooks": "^7.13.2",
-    "@mantine/notifications": "^7.13.2",
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/card": "^2.0.34",
-    "@nextui-org/input": "^2.2.5",
-    "@nextui-org/pagination": "^2.0.36",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/table": "^2.0.40",
-    "@nextui-org/tabs": "^2.0.37",
-    "@nextui-org/theme": "^2.2.11",
+    "@internationalized/date": "^3.9.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "bcrypt": "^5.1.1",
-    "framer-motion": "^11.9.0",
+    "framer-motion": "^12.23.12",
     "jose": "^5.9.3",
-    "mantine-form-zod-resolver": "^1.1.0",
+    "lucide-react": "^0.542.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "zod": "^3.23.8"
+    "tailwindcss": "^4.1.12",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.6",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "trustedDependencies": [
+    "@heroui/shared-utils",
+    "@tailwindcss/oxide"
+  ]
 }
