--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.542.0",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
+    "pinata": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
