--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-crm",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,14 +11,6 @@
     "migrate": "drizzle-kit generate --dialect=postgresql --schema=./supabase/db/schemas/ --out=./supabase/db/migrations/drizzle && node ./supabase/db/migration/migrate.js"
   },
   "dependencies": {
-    "@heroui/button": "^2.2.24",
-    "@heroui/date-input": "^2.3.24",
-    "@heroui/drawer": "^2.2.21",
-    "@heroui/form": "^2.1.24",
-    "@heroui/input": "^2.4.25",
-    "@heroui/react": "^2.8.2",
-    "@heroui/table": "^2.2.24",
-    "@heroui/toast": "^2.0.14",
     "@hookform/resolvers": "^3.9.0",
     "@internationalized/date": "^3.9.0",
     "@tailwindcss/postcss": "^4.1.12",
@@ -25,24 +18,68 @@
     "framer-motion": "^12.23.12",
     "jose": "^5.9.3",
     "lucide-react": "^0.542.0",
-    "next": "14.2.13",
+    "@heroui/button": "^2.2.24",
+    "@heroui/date-input": "^2.3.24",
+    "@heroui/drawer": "^2.2.21",
+    "@heroui/form": "^2.1.24",
+    "@heroui/react": "^2.8.2",
+    "@heroui/framer-utils": "2.1.22",
+    "@heroui/image": "2.2.16",
+    "@heroui/input": "2.4.27",
+    "@heroui/radio": "2.3.26",
+    "@heroui/react-utils": "2.1.13",
+    "@heroui/scroll-shadow": "2.3.17",
+    "@heroui/select": "2.4.27",
+    "@heroui/skeleton": "2.2.16",
+    "@heroui/spinner": "2.2.23",
+    "@heroui/switch": "2.2.23",
+    "@heroui/system": "2.4.22",
+    "@heroui/table": "2.2.26",
+    "@heroui/tabs": "2.2.23",
+    "@heroui/theme": "2.4.22",
+    "@heroui/toast": "2.0.16",
+    "@heroui/tooltip": "2.2.23",
+    "@heroui/user": "2.2.21",
+    "@react-aria/ssr": "3.9.10",
+    "@react-aria/visually-hidden": "3.8.27",
+    "clsx": "2.1.1",
+    "intl-messageformat": "10.7.16",
+    "next": "15.3.1",
     "next-auth": "^4.24.8",
     "pinata": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "4.1.12",
     "zod": "^3.23.8",
+    "next-themes": "0.4.6",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8.5.6",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "typescript": "^5"
+    "@next/eslint-plugin-next": "15.3.4",
+    "@react-types/shared": "3.30.0",
+    "@tailwindcss/postcss": "4.1.11",
+    "@types/node": "20.5.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.34.1",
+    "@typescript-eslint/parser": "8.34.1",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "globals": "16.0.0",
+    "postcss": "8.5.6",
+    "prettier": "3.5.3",
+    "tailwind-variants": "3.1.1",
+    "tailwindcss": "4.1.12",
+    "typescript": "5.6.3"
   },
   "trustedDependencies": [
     "@heroui/shared-utils",
